Bug 274936 - search folders always show messages as unread
Summary: search folders always show messages as unread
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: Git (master)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-04 21:35 UTC by Luis Silva
Modified: 2013-10-20 08:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2011-06-04 21:35:48 UTC
Version:           Git (master) (using KDE 4.6.3) 
OS:                Linux

The summary says it all. Search folders always show messages as unread even when they are read on their original folder. The anoying consequence is that whenever you cycle throug new messages you always have to cycle through all the searches.

Reproducible: Always

Steps to Reproduce:
Create a search. All the mesages there will be marked as unread.

Actual Results:  
All the mesages on a search folder asre marked as unread.

Expected Results:  
Messages in search folders have a read/unread status equal to that in their original folders

OS: Linux (i686) release 2.6.38-9-generic
Compiler: cc
Comment 1 Laurent Montel 2011-07-04 16:57:14 UTC
I can confirm it.
Comment 2 Laurent Montel 2011-08-05 07:44:13 UTC
For me it's not marked as read
Could you retest with updated kmail please ?
Comment 3 Luis Silva 2011-08-06 09:59:11 UTC
I just recompiled (334c719ec0cc1ee3cf3936e9c6b6683304bb2f31).
The situation has definitely improved, as the messages themselves are not markled as unread. The folders, however, are still marked as having unread mail and even show an unread count.
Comment 4 Dennis Schridde 2011-09-24 15:24:00 UTC
Confirming for 4.7.1
Comment 5 Luis Silva 2012-04-05 13:43:57 UTC
Still the same situation in 4.8.2.
Comment 6 Luis Silva 2012-12-19 01:50:40 UTC
Search folders still have an unread count equal to the total number of messages found. I am using master, compiled from source.
Comment 7 Daniel Vrátil 2012-12-21 16:18:32 UTC
Git commit 16951119eb0914c4869fdc8bb4b2339bea4241ab by Dan Vrátil.
Committed on 21/12/2012 at 17:14.
Pushed by dvratil into branch 'master'.

Correctly count items flags in virtual collections

REVIEW: 107715
Related: bug 305969

M  +7    -1    server/src/handlerhelper.cpp

http://commits.kde.org/akonadi/16951119eb0914c4869fdc8bb4b2339bea4241ab
Comment 8 Graeme Hewson 2013-10-20 08:36:08 UTC
The problem still occurs in 4.11.2.
Comment 9 Graeme Hewson 2013-10-20 08:39:41 UTC
Sorry for the noise -- the problem was fixed and doesn't occur in 4.11.2.