Correctly count items flags in virtual collections

REVIEW: 107715
BUG: 274936
BUG: 305969